syntax = "proto3";

package board;

message ImageProto {
    bytes chunk = 2;
}